--- a/README
+++ b/README
@@ -1,58 +1,4 @@
-d287 Final Project
-Scott Gary
-012269995
+This is the final project for WGU d287.  
 
-
-The following is a breakdown of changes made in the original file by section.
-
-Section C:
-Mainscreen.html lines 7-22 added styles
-Mainscreen.html line 36- updated name of shop
-Mainscreen.html line 31-changed title
-
-Section D:
-added about.html in /templates
-about.html lines 1-68 html added for style and content
-about.html  line 65 added link to return to main page
-mainscreen.html line 45 added button linked to about page
-
-
-Section E:
-BootStrapData.java lines 49- 108 instantiate 3 in-house parts, 2 outsourced parts and 5 products
-BootStrapData.java lines 46, 68, 95 added "if" statements to only add this instantiated data if the database is empty
-
-Section F:
-added buySuccess.html to handle successful purchase
-added buyFailure.html to handle unsuccessful purchase
-AddProductController lines 135-153 Added scripts to receive product information from "Buy now buttons"
-    method added to check if inventory item exists.  Logic implemented to decrement inventory count of product or return 'buyFailure' if
-    inventory is insufficient
-Mainscreen line 111 added "buy now" button for all products that feeds product information to the buyProduct method written above
-
-Section G:
-BootStrapData lines 55, 56, 65, 66, 78, 79, 89, 90, 99, 100- added additional fields to sample inventory for min and max values
-Part.Java lines 51,52, 60, 61 added default min and max values to constructors
-Part.Java lines 33-37, added new fields min and max and implemented min and max validation.
-Part.java lines 104-115 added setter and getter methods for new min and max fields
-Part.java lines 121-127, added logic to produce runtime error if inventory is outside of max and min values
-Application properties line 6- renamed persistent storage file
-OutsourcedPartForm lines 27, 29 - added min and max form fields
-InHouseForm lines 26, 28- added min and max form fields
-InHousePartServiceimpl line 54 added call to validateMinMax method during save
-OutsourcedPartServiceImpl line 52 added call to validateMinMax method during save
-
-Section H:
-Added Min Validator file
-Added ValidMin annotation file
-Added Max Validator file
-Added ValidMax annotation file
-Part.java line 25, added ValidMin annotation
-Part.java line 26, added ValidMax annotation
-InHouse part form lines 27, 29 added error display below fields
-OutsourcedPartForm lines 27, 29 added error display below fields
-EnufProductsValidator lines 35-38, modified and cleaned logic. Added logic to determine if inventory values will fall below minimums
-EnufProductsValidator lines 39, 40 Added custom constraint violations
-ProductForm uncommented lines 78-79 to add link back to main
-
-Section J:
-All validators are currently in use
+The project creates a mock ecommerce site that sells products as well as the parts that are used to build these products.  This project was created using Spring and
+implements custom validators for form functionality.  
