--- a/README
+++ b/README
@@ -1,2 +1,4 @@
-The project creates a mock ecommerce site that sells products as well as the parts that are used to build these products.  This project was created using Spring and
-implements custom validators for form functionality.  
+The project creates a mock ecommerce site that sells products as well as the parts that are used to build those products.  This project was created using Spring and
+
+The application utilizes a Spring back-end, incorporating custom validators for various application functions.
+
